# roll-cli

./: Cargo.toml  README.md  flake.nix  result
crates/rusty-dice/: Cargo.toml
crates/rusty-dice-expressions/: Cargo.toml
crates/rusty-dice-expressions/src/: eval.rs  lib.rs  parse.rs
crates/rusty-dice/src/: cards.rs  dice.rs  lib.rs  modifiers.rs
crates/rusty-roll-tables/: Cargo.toml
crates/rusty-roll-tables/src/: data.rs  lib.rs  parse.rs
src/: app.rs  cli.rs  dice.rs  expressions.rs  main.rs
