[package]
name = "roll-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
nom = "7.1.3"
rand = "0.8.5"
rusty-dice = { path = "crates/rusty-dice" }
rusty-dice-expressions = { path = "crates/rusty-dice-expressions" }

[workspace]
resolver = "2"
members = [
  "crates/*"
]
