[package]
name = "roll-cli"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
log = "0.4.27"
nom = "7.1.3"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
rusty-dice = { path = "crates/rusty-dice" }
rusty-dice-expressions = { path = "crates/rusty-dice-expressions" }

[workspace]
resolver = "2"
members = [
  "crates/*"
]
